# DHgeN: a Python module for generating District Heating Networks layouts.

# Copyright (c) 2022 Idiap Research Institute, http://www.idiap.ch/
# Written by Giuseppe Peronato <Giuseppe.Peronato@idiap.ch>

# This file is part of DHgeN.

# DHgeN is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.

# DHgeN is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with DHgeN. If not, see <http://www.gnu.org/licenses/>

[build-system]
# Minimum requirements for the build system to execute.
requires = [
"setuptools>=61.0.0",
"wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhgen"
version = "0.0.3"
requires-python = ">=3.9"
dependencies = [
	"networkx>=3.0",
	"geopandas>=1.0",
	"requests",
]

[project.optional-dependencies] 
optional = [
	"geovoronoi",
	"matplotlib",
]
test = [
# harcoded versions for testing/reproducibility
"geopandas==1.0.1",
"pandas==2.2.3",
"networkx==3.4.2",
"requests==2.32.3",
"pyogrio==0.10.0",
"shapely==2.0.6",
]

